--- a/web/DashBoard.html
+++ b/web/DashBoard.html
@@ -1,8 +1,3 @@
-<%-- 
-    Document   : DashBoard
-    Created on : May 7, 2023, 10:54:58 PM
-    Author     : Vinh
---%>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,6 +8,7 @@
 
     <link rel="stylesheet" href="assets/css/DAstyle.css">
   </head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <body>
     <div class="grid-container">
       <main class="main-container">
@@ -62,16 +58,59 @@
             <h2 class="chart-title">Top 5 Products</h2>
             <div id="bar-chart"></div>
           </div>
-
+          <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
           <div class="charts-card">
             <h2 class="chart-title">Purchase and Sales Orders</h2>
             <div id="area-chart"></div>
           </div>
-
+          <canvas id="myChart2" style="width:100%;max-width:600px"></canvas>
         </div>
       </main>
       
     </div>
   
   </body>
+  <script>
+    const xValues = [100,200,300,400,500,600,700,800,900,1000];
+    
+    new Chart("myChart", {
+      type: "line",
+      data: {
+        labels: xValues,
+        datasets: [{ 
+          data: [860,1140,1060,1060,1070,1110,1330,2210,7830,2478],
+          borderColor: "red",
+          fill: false
+        }, { 
+          data: [1600,1700,1700,1900,2000,2700,4000,5000,6000,7000],
+          borderColor: "green",
+          fill: false
+        }, { 
+          data: [300,700,2000,5000,6000,4000,2000,1000,200,100],
+          borderColor: "blue",
+          fill: false
+        }]
+      },
+ 
+      options: {
+        legend: {display: false}
+      }
+    });
+    new Chart("myChart2", {
+  type: "pie",
+  data: {
+    labels: xValues,
+    datasets: [{
+      backgroundColor: barColors,
+      data: yValues
+    }]
+  },
+  options: {
+    title: {
+      display: true,
+      text: "World Wide Wine Production 2018"
+    }
+  }
+});
+    </script>
 </html>
