thêm danh mục liên quan vào sản phẩm chi tiết

--- a/Leocr-product-detail/index.html
+++ b/Leocr-product-detail/index.html
@@ -118,11 +118,278 @@
                 </p>
 
             </div>
-            <div class="san-pham-ban-chay khung-thong-tin">
+            <div class="san-pham-ban-chay khung-thong-tin ml-12">
 
             </div>
         </div>
+
+        <!-- comment, like: begin -->
+        <div class="comment-va-like">
+
+        </div>
+        <!-- comment, like: end -->
+
+        <!-- sản phẩm liên quan: begin -->
+
+        <div class="danh-muc-lien-quan khung-thong-tin mt-20">
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="danh-muc-lien-quan__item">
+                <div class="danh-muc-lien-quan__anh">
+                    <img src="https://i8.amplience.net/i/jpl/jd_533562_c?qlt=92&w=750&h=957&v=1&fmt=auto" alt="">
+                </div>
+                <div class="thong-tin-danh-muc-lien-quan">
+                    <div class="ten-san-pham-lien-quan">Áo real</div>
+                    <div class="df">
+                        <div class="f1">
+                            <div class="danh-gia-san-pham-lien-quan">
+
+                                <div class="so-luot-danh-gia-san-pham-lien-quan">7 lượt đánh giá</div>
+                                <div class="so-sao-san-pham-lien-quan">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </div>
+                                <div class="so-luong-da-ban-san-pham-lien-quan">Đã bán 7</div>
+                            </div>
+                        </div>
+                        <div class="f1">
+                            <div class="gia-san-pham-lien-quan">
+                                <div class="gia-goc-san-pham-lien-quan">
+                                    100.000
+                                </div>
+                                <div class="gia-uu-dai-san-pham-lien-quan">
+                                    95.000
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- sản phẩm liên quan: end -->
+        <div class="df">
+            <button class="nut nut-xem-them f1">Xem thêm</button>
+        </div>
+        <div class="df">
+            <button class="nut nut-thu-gon f1">Thu gọn</button>
+        </div>
     </div>
+
+    <script>
+        let nutXemThemElement = document.querySelector('.nut-xem-them');
+        let nutThuGonElement = document.querySelector('.nut-thu-gon');
+        let danhMucLienQuanElement = document.querySelector('.danh-muc-lien-quan')
+
+        nutThuGonElement.style.display = 'none';
+        nutXemThemElement.onclick = function () {
+            danhMucLienQuanElement.style.maxHeight = '20000px';
+            nutThuGonElement.style.display = 'block';
+            nutXemThemElement.style.display = 'none';
+        }
+        nutThuGonElement.onclick = function () {
+            danhMucLienQuanElement.style.maxHeight = '350px';
+            nutXemThemElement.style.display = 'block';
+            nutThuGonElement.style.display = 'none';
+        }
+    </script>
 </body>
 
 </html>
