DashBoard add more detail

--- a/web/DashBoard.html
+++ b/web/DashBoard.html
@@ -13,55 +13,53 @@
 <body>
   <div class="all-thong-ke">
     <div class="ten-div">
-      Statistics
+      Thống kê
     </div>
     <div class="thong-ke">
 
       <div class="thong-ke-item">
         <div class="icon-tk">
-          <i class="fa-solid fa-clock full"></i>
+          <i class="fa-solid fa-clock full violet"></i>
         </div>
         <div class="so-tk">
           230k
         </div>
         <div class="ten-tk">
-          Sales
+          Đã bán
         </div>
         
       </div>
-
-
       <div class="thong-ke-item">
         <div class="icon-tk">
-          <i class="fa-solid fa-clock full"></i>
+          <i class="fa-solid fa-user full blue"></i>
         </div>
         <div class="so-tk">
-          230k
+          8.549k
         </div>
         <div class="ten-tk">
-          Sales
+          Khách hàng
         </div>
       </div>
       <div class="thong-ke-item">
         <div class="icon-tk">
-          <i class="fa-solid fa-clock full"></i>
+          <i class="fa-solid fa-cart-shopping full red"></i>
         </div>
         <div class="so-tk">
-          230k
+          1.423k
         </div>
         <div class="ten-tk">
-          Sales
+          Sản phẩm
         </div>
       </div>
       <div class="thong-ke-item">
         <div class="icon-tk">
-          <i class="fa-solid fa-clock full"></i>
+          <i class="fa-solid fa-dollar-sign full green"></i>
         </div>
         <div class="so-tk">
-          230k
+          $9745
         </div>
         <div class="ten-tk">
-          Sales
+          Thu nhập
         </div>
       </div>
     </div>
