--- a/web/DashBoard.html
+++ b/web/DashBoard.html
@@ -14,7 +14,7 @@
 <body>
   <div class="all-thong-ke">
     <div class="ten-div">
-      Thống kê
+      THỐNG KÊ TỔNG
     </div>
     <div class="thong-ke">
 
@@ -106,6 +106,8 @@
   const yValues = [7, 8, 8, 10];
   const x2Values = ["Thu nhập hôm nay", "Còn thiếu"];
   const y2Values = [800,200];
+  const x3Values = [50, 60, 70, 80];
+  const y3Values = [7, 8, 8, 10];
   barColors = ["rgb(115, 174, 27)","rgba(200,250,200)"];
   new Chart("bieu-do-tuan", {
     type: "line",
@@ -145,13 +147,15 @@
 new Chart("bieu-do-san-pham", {
   type: "bar",
   data: {
-    labels: xValues,
+    labels: x3Values,
     datasets: [{
-      backgroundColor: rgba(200,250,200),
-      data: yValues
+      backgroundColor: "rgba(200,250,200)",
+      data: y3Values
     }]
   },
-  
+  options: {
+    
+  }
 });
 
 </script>
